tests/compile_fail/debug/unclosed_brace.stderr
error: invalid format string: expected `'}'`, found `')'`
 --> tests/compile_fail/debug/unclosed_brace.rs:3:21
  |
3 |     #[debug("Stuff({)", bar)]
  |                    -^ expected `}` in format string
  |                    |
  |                    because of this opening brace
  |
  = note: if you intended to print `{`, you can escape it using `{{`
